[package]
name = "codespan_preprocessed"
version = "0.5.7"
authors = ["Xophe <christophe.dousson@orange.com>"]
edition = "2021"
license = "MIT"
description = "Beautiful diagnostic reporting for preprocessed text files"
repository = "https://github.com/XopheD/codespan_preprocessed"

[dependencies]
codespan-reporting = "0.11"

[dev-dependencies]
unindent = "0.1"
